compiler/testData/diagnostics/tests/cast/AsArray.kt
fun f(x: Any) = <!UNCHECKED_CAST!>x as Array<String><!>